--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.6.0",
     "@hookform/resolvers": "^2.8.4",
     "apexcharts": "^3.30.0",
+    "axios": "^0.24.0",
     "framer-motion": "^5.3.1",
     "next": "12.0.4",
     "react": "17.0.2",
